<?xml version="1.0" encoding="UTF-8"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.openestate.io</groupId>
        <artifactId>OpenEstate-IO</artifactId>
        <version>1.5</version>
    </parent>

    <artifactId>OpenEstate-IO-ImmobiliareIT</artifactId>
    <version>1.5</version>
    <packaging>jar</packaging>

    <name>OpenEstate-IO-ImmobiliareIT</name>
    <description>
        OpenEstate-IO-ImmobiliareIT is a Java library to read and write real estate data in the XML format of
        immobiliare.it.
    </description>
    <url>https://openestate.org</url>
    <organization>
        <name>OpenEstate</name>
        <url>https://openestate.org/</url>
    </organization>
    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
            <comments>A business-friendly OSS license</comments>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>andy</id>
            <name>Andreas Rudolph</name>
            <email>andy@openindex.de</email>
            <organization>OpenIndex</organization>
            <organizationUrl>https://openindex.de/</organizationUrl>
        </developer>
    </developers>

    <dependencies>

        <!-- compile -->
        <dependency>
            <groupId>commons-codec</groupId>
            <artifactId>commons-codec</artifactId>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>jakarta.annotation</groupId>
            <artifactId>jakarta.annotation-api</artifactId>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>jakarta.xml.bind</groupId>
            <artifactId>jakarta.xml.bind-api</artifactId>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.glassfish.jaxb</groupId>
            <artifactId>jaxb-runtime</artifactId>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>org.jvnet.jaxb2_commons</groupId>
            <artifactId>jaxb2-basics-runtime</artifactId>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.openestate.io</groupId>
            <artifactId>OpenEstate-IO-Core</artifactId>
            <scope>compile</scope>
        </dependency>

        <!-- test -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <scope>test</scope>
        </dependency>

    </dependencies>

    <build>
        <plugins>

            <!-- compiler -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <release>8</release>
                </configuration>
            </plugin>

            <!-- add generated JAXB sources -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>build-helper-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>add-source</goal>
                        </goals>
                        <configuration>
                            <sources>
                                <source>${project.basedir}/src/main/jaxb</source>
                            </sources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- JAXB -->
            <plugin>
                <groupId>org.jvnet.jaxb2.maven2</groupId>
                <artifactId>maven-jaxb23-plugin</artifactId>
                <configuration>
                    <generateDirectory>${project.basedir}/src/main/jaxb</generateDirectory>
                    <schemaDirectory>${project.basedir}/src/main/schema</schemaDirectory>
                    <scanDependenciesForBindings>false</scanDependenciesForBindings>

                    <readOnly>false</readOnly>
                    <noFileHeader>true</noFileHeader>
                    <enableIntrospection>true</enableIntrospection>
                    <markGenerated>true</markGenerated>
                    <removeOldOutput>true</removeOldOutput>
                    <cleanPackageDirectories>true</cleanPackageDirectories>
                    <forceRegenerate>false</forceRegenerate>

                    <episode>true</episode>
                    <episodeFile>${project.basedir}/src/main/jaxb/META-INF/sun-jaxb.episode</episodeFile>

                    <encoding>${project.build.sourceEncoding}</encoding>
                    <locale>en</locale>
                    <debug>false</debug>
                    <verbose>false</verbose>

                    <specVersion>2.3</specVersion>
                    <extension>true</extension>
                    <strict>true</strict>
                    <args>
                        <arg>-XtoString</arg>
                        <arg>-Xcopyable</arg>
                        <arg>-Xequals</arg>
                    </args>
                </configuration>
            </plugin>

        </plugins>
    </build>
</project>
